# Scythe-Transcribe

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
benchmark/: .gitignore  README.md  paragraphs.txt  record_samples.py  requirements.txt  run_benchmark.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  OpenRouterModelPicker.tsx  audio.ts  index.css  main.tsx
scythe-transcribe/: Cargo.toml
scythe-transcribe/src/: config.rs  groq.rs  hotkey.rs  hotkey_status_default.json  instance_lock.rs  lib.rs  macos.rs  main.rs  models.rs  openrouter.rs  paths.rs  pipeline.rs  prompts.rs  runtime_icon.rs  server.rs  settings_store.rs  startup.rs  text_replacements.rs  wav_speech_chunks.rs
xtask/: Cargo.toml
xtask/src/: main.rs
