[package]
name = "scythe-transcribe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local speech-to-text with Groq/OpenRouter and browser UI"

[[bin]]
name = "scythe-transcribe"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
cpal = "0.15"
dirs = "5"
open = "5"
dotenvy = "0.15"
fs2 = "0.4"
futures = "0.3"
hound = "3.5"
image = { version = "0.25", default-features = false, features = ["webp"] }
mime_guess = "2"
once_cell = "1.19"
regex = "1"
plist = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = "0.19"
tao = "0.32"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
core-foundation = "0.9"
objc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
hyper = "1"
serde_json = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
